<resources>
    <string name="app_name">Dems</string>
    <string name="title_contacts">Contact</string>
    <string name="title_teams">Teams</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_user">LoginUserActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="password_hint">Password...</string>
    <string name="email_hint">EMail...</string>
    <string name="welcome_login">Welcome back to Dems</string>
    <string name="forget_password">Forget password ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login_number">Log in with your phone number</string>
    <string name="create_account_title">Create a Dems account</string>
    <string name="account_already">I already have an account</string>
    <string name="registration_button">Register</string>
    <string name="login_button">Login</string>
    <string name="field_registration_login_required">Please fill the fields. The mail and the password are required</string>
    <string name="registration_success">Your account have been created succesfully</string>
    <string name="alert_registration_title">Creating your account</string>
    <string name="alert_registration_message">The creation of your account is in process. Please do not leave till the end.</string>
    <string name="login_successfull">Sign in successfull</string>
    <string name="alert_login_title">Sign In</string>
    <string name="alert_login_message">In process...</string>
    <string name="add_contact_menu">Add contact</string>
    <string name="create_team_menu">Create a new team</string>
    <string name="logout_menu">Logout</string>
    <string name="username_hint">Username</string>
    <string name="user_speciality">My speciality</string>
    <string name="setting_button">Update</string>
    <string name="profile_updated">Profile updated</string>
    <string name="alert_create_team_title">Create a team project</string>
    <string name="alert_create_team_project_hint">Project name</string>
    <string name="alert_create_team_button">Create</string>
    <string name="alert_create_team_hint1">You have to mention the project you are working on</string>
    <string name="alert_create_team_cancel_button">Cancel</string>
    <string name="alert_create_team_desc_hint">Description</string>
    <string name="team_created_successfully">Your team has been created succesfully</string>
    <string name="chat_field_hint">Message...</string>
    <string name="field_empty">Field empty</string>
    <string name="number_field_hint">Type your phone number</string>
    <string name="number_code_verification">Verification code</string>
    <string name="send_verification_code_button">Send verification code</string>
    <string name="send_number_code_button">Send verification code</string>
    <string name="verify_number_code_button">Verify the code</string>
    <string name="phone_required">The phone number is required</string>
    <string name="number_wrong">The phone number is not correct. Enter  correct phone number with your country code</string>
    <string name="code_sent">A code has been sent</string>
    <string name="code_number_required">Please enter the code thas has been sent</string>
    <string name="senderName_connected">you</string>
    <string name="profile_image_updated">Profile Image updated</string>
    <string name="alert_add_contact_hint">User identifier (mail or phone number)</string>
    <string name="alert_add_contact_button">Search</string>
    <string name="add_contact_empty_field">The identifier must be specified</string>
    <string name="alert_add_contact_title">Send request</string>
    <string name="user_request">Request</string>
    <string name="title_chat">chat</string>
    <string name="accept_request_button">accept</string>
    <string name="decline_request_button">decline</string>
    <string name="alert_request_accept">Accept</string>
    <string name="alert_request_decline">Decline</string>
    <string name="problem_sending_message">A problem occur</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="team_setting_name">team name</string>
    <string name="team_setting_description">team description</string>
    <string name="alert_addC_add">Add to the team</string>
    <string name="alert_remove_contributor">Remove from the team</string>
    <string name="alert_add_contributor_to_contact">Add to my contact</string>
    <string name="request_alr_sent">Request already sent</string>
    <string name="alr_contact">Already in your contact</string>
    <string name="request_sent">Request sent</string>
    <string name="delete_team">Delete the team</string>
    <string name="alert_delete_team_text">Are you sure about this action ?</string>
    <string name="alert_delete_button">Delete</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="alert_select_file">Select file to send</string>
    <string name="select_file_image_title">Select an image</string>
    <string name="select_file_pdf_title">Select a pdf file</string>
    <string name="select_file_word_title">Select a word file</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_evr">Delete for everyone</string>
    <string name="message_deleted">message deleted</string>
    <string name="delete_message">Delete message</string>
</resources>
