<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light"
        android:text="@string/create_account_title"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="26sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:id="@+id/registration_mail"
            />
        <EditText
            android:layout_marginHorizontal="16dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:id="@+id/registration_password"/>

        <Button
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/registration_button"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="16dp"
            android:id="@+id/registration_button"/>

        <TextView
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/account_already"
            android:layout_marginBottom="25dp"
            android:id="@+id/account_already_created_link"
            />




    </LinearLayout>


</LinearLayout>