<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginNumberActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light"
        android:text="@string/welcome_login"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="26sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:inputType="phone"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/number_field_hint"
            android:id="@+id/number_field"
            android:gravity="center"
            android:maxLines="1"
            />
        <EditText
            android:layout_marginHorizontal="16dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/number_code_verification"
            android:gravity="center"
            android:visibility="invisible"
            android:maxLines="1"
            android:id="@+id/number_code_field"/>
        <Button
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/send_number_code_button"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="8dp"
            android:id="@+id/send_code_button"
            />
        <Button
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/verify_number_code_button"
            android:textColor="@android:color/background_light"
            android:layout_marginBottom="16dp"
            android:id="@+id/verify_code_button"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>