<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_settings">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_profile"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:padding="16dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/update_user_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_account"
                app:civ_border_width="4dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:civ_border_color="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/user_name_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dembo"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/user_speciality_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BI"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>


        <EditText
            android:id="@+id/update_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/username_hint"
            android:textStyle="bold"
            android:maxLines="1"
            android:padding="16dp"/>

        <EditText
            android:maxLines="1"
            android:id="@+id/update_user_speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_user_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/user_speciality"
            android:textStyle="bold"
            android:padding="16dp"/>

        <Button
            android:id="@+id/update_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_user_speciality"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/setting_button"
            android:textStyle="bold"
            android:padding="16dp"
            android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"/>



    </RelativeLayout>

</FrameLayout>